[project]
name = "comfyui-flux-together-api"
description = "A custom node implementation for ComfyUI that integrates with Together.ai's FLUX image generation models. This project is inspired by and adapted from [a/ComfyUI-FLUX-BFL-API](https://github.com/gelasdev/ComfyUI-FLUX-BFL-API) to work with the Together.ai API."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["requests>=2.31.0", "Pillow>=10.0.0", "numpy>=1.24.0", "configparser>=5.3.0", "together >=1.3.3", "tenacity >=9.0.0"]

[project.urls]
Repository = "https://github.com/BZcreativ/ComfyUI-FLUX-TOGETHER-API"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-FLUX-TOGETHER-API"
Icon = ""
